# FastAPI_codebase_v1

./: .dockerignore  .gitignore  EXAMPLE.md  README.md  pyproject.toml
app/: main.py
app/config/: cors_config.py  db_config.py  logging_config.py  router_config.py
app/example/: dependencies.py  exception.py
app/example/controller/: example_controller.py
app/example/models/dto/: example_dto.py
app/example/models/entity/: example_entity.py
app/example/models/schema/: example_schema.py
app/example/repository/: example_repository.py
app/example/service/: example_service.py
app/models/: response.py
app/utility/date/: datetime_utility.py
app/utility/json/: json_utility.py
config/: .env.example
docker/: Dockerfile
tests/: conftest.py  test_response.py
tests/example/: test_dto.py  test_repository.py  test_service.py
